--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ python:
   - 3.5.2
 
 install:
-  - pip install --use-mirrors requests
-  - pip install --use-mirrors pymsql
-  - pip install --use-mirrors xmltodict
-  - pip install --use-mirrors redis
+  - pip install requests
+  - pip install pymsql
+  - pip install xmltodict
+  - pip install redis
 
 script:
   - Spider.py
