注释了mysql和redis操作

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,10 @@ python:
 
 install:
   - pip install requests
-  - pip install pymysql
   - pip install xmltodict
-  - pip install redis
 
 script:
-  - python Spider.py
+  - python CityRealTimeSpider.py
 
 branches:
   only:
